Update Configurações “general”

--- a/content/settings.json
+++ b/content/settings.json
@@ -19,6 +19,6 @@
   "secondary_color": "#393e46",
   "icon": "/img/icon.png",
   "store_id": 1466,
-  "description": "Modernas e elegantes, as bolsas D.Dora trazem praticidade para o dia a dia da mulher.",
+  "description": "Bolsas Artesanais",
   "large_icon": "/img/large-icon.png"
 }
